# genetic

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run.bat  build_and_run.sh  build_only.bat  build_only.sh  genetic.cpp  run.bat  run.sh  settings.h
include/: Individu.h  Vec.h  genetic.h  randomizer.h  settings.h  utils.h
scripts/linux_macOS/: build_and_run.sh  build_only.sh  run.sh
scripts/windows/: build_and_run.bat  build_only.bat  run.bat
src/: genetic.cpp  main.cpp  randomizer.cpp
